--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -221,6 +221,7 @@
           left: 0
           right: 0
           bottom: 0
+          overflow: auto
     &--mobile
       &_fixed
         position: fixed
