--- a/sass/blocks/_header.sass
+++ b/sass/blocks/_header.sass
@@ -96,6 +96,7 @@
     background-color: transparent
     border: none
     cursor: pointer
+    overflow: hidden
     &__item
       width: 16px
       height: 1px
